k8s/ad-ms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ad-ms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ad-ms
  template:
    metadata:
      labels:
        app: ad-ms
    spec:
      containers:
        - image: rsolinux/ad-ms:latest
          name: ad-ms
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/ads/health
              port: server
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /v1/ads/health/readiness
              port: server
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 2

---

apiVersion: v1
kind: Service
metadata:
  name: ad-ms
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: ad-ms
